# sign-language-data-loading

./: LICENSE  README.md  pyproject.toml  requirements.txt
sldl/: __init__.py  collator.py  dataset.py
sldl/targets/: __init__.py  continuous_recognition.py  segments.py  target.py  temporal_boundary_offset.py  temporal_segmentation.py
sldl/utils/: tar.py  videos.py  windows.py
